# UniversalUnconsciousness

./: .gitignore  LICENSE  README.md  data_utils.py  env_create.sh  env_create_uv.sh  plot_utils.py  pyproject.toml
DSA_comparisons/: run_dsa.py
DeLASE_analysis/: run_delase.py  run_delase_across_hypers.py  run_grid_search.py
DeLASE_analysis/conf/: config.yaml
UniversalUnconsciousness/: __init__.py  data_utils.py  hdf5_utils.py  iaaft.py  plot_utils.py  power_analysis.py  sci_style.mplstyle  sensory_responses.py
UniversalUnconsciousness/DeLASE_analysis/: delase_hyperparam_queueing_script.py  delase_queueing_script.py  run_delase.py  run_delase_across_hypers.py  run_grid_search.py
UniversalUnconsciousness/network_modelling/: EI_RNN.py  EI_model_queue.py  run_EI_model.py
_jupyter/: 2024-05-19 - Loading Data.ipynb  2024-06-30 - Chunk Data.ipynb  2024-09-13 - Investigating Dex.ipynb  2024-09-13 - Investigating Electrodes.ipynb  2024-10-01 - Filtering Electrodes.ipynb  2024-10-21 - Electrode Filtering FINAL.ipynb  Fix Grid Run List Areas.ipynb  LIF Network Modeling.ipynb  Network Modeling.ipynb  Power Analysis.ipynb
_jupyter/DSA Comparisons/: 2024-06-17 - DSA On Propofol.ipynb  2024-06-24 - DSA on Propofol with Hydra.ipynb  2024-06-25 - DSA on Propofol Collect Results.ipynb  2024-06-25 - Running Grid Search + DSA.ipynb
_jupyter/DeLASE Analysis/: 2024-06-25 - Running Grid Search + DSA.ipynb  2024-06-25 - Running Grid Search + DeLASE.ipynb  2024-08-18 - Window Size?.ipynb  2024-11-08 - Test Across Hyperparameters FOURIER.ipynb  2024-11-09 - Sensory Responses.ipynb
_jupyter/Figures/: Figure 1.ipynb  Figure 2.ipynb  Figure 3.ipynb  correlate-autocorrelation.ipynb  delta-tracking.ipynb  grid_results.ipynb  hyperparam-sweeps.ipynb  iaaft.ipynb  introduction.ipynb  pendulum-swing.ipynb  physiology.ipynb  power-analysis.ipynb  prediction-quality.ipynb  response-unresponsive.ipynb  responsive-unresponsive.ipynb  resting-state.ipynb  sensory-responses.ipynb  single-area.ipynb  single-session-tracking.ipynb  springs.ipynb  stability-lowdose.ipynb  stability-main.ipynb  var_analysis.ipynb
_jupyter/Testing/: 2024-05-19 - Loading Data.ipynb  2024-06-06 - Testing Oscillatory Systems.ipynb  2024-06-07 - Oscillatory Test.ipynb  2024-06-08 - Chaotic Net Demo-Copy1.ipynb  2024-06-08 - Chaotic Net Demo-v2.ipynb  2024-06-08 - Chaotic Net Demo.ipynb  2024-06-08 - Linear Demo.ipynb  2024-06-09 - Lorenz stability periodic.ipynb  2024-06-12 - Collecting Data on Propofol.ipynb  2024-06-12 - Rossler stability analysis.ipynb  2024-06-16 - Damped VDP stability analysis.ipynb  2024-08-27 - Damped VDP stability DeLASE Example.ipynb  2024-09-16 - Chaotic net again?.ipynb  2024-09-16 - Testing Bandpass.ipynb  2024-11-12 - Testing Bandpass v2.ipynb  (+7 more)
_slurm/: queue_EI_RNN_scripts.sh  queue_delase_hyerparam_scripts.sh  queue_delase_scripts.sh
(+15 files in other folders)
