[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[project]
name = "UniversalUnconsciousness"
version = "1.0"
description = "Code for evaluating dynamic stability during anesthetic-induced unconsciousness via different agents."
authors = [
  {name = "Adam J. Eisen", email = "eisenaj@mit.edu" }
]

requires-python = ">=3.11"
dependencies = [
  "h5py",
  "hydra-core",
  "hydra-submitit-launcher",
  "hydra-list-sweeper",
  "jupyter",
  "jupyterlab",
  "matplotlib",
  "nolds",
  "numpy>=1.26,<2.0",
  "pandas",
  "scikit-learn",
  "scipy",
  "seaborn",
  "statsmodels",
  "colorcet",
  "tqdm",
  "torch==2.0.1+cu118",
  "setuptools>=77,<81",
  "delase @ git+https://github.com/adamjeisen/DeLASE.git",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["UniversalUnconsciousness"]

[tool.hatch.build.targets.sdist]
include = [
  "UniversalUnconsciousness/**",
  "pyproject.toml",
  "README.md",
  "LICENSE",
]

# Configure uv to use PyTorch's custom index for torch packages
[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu118" }
